--- a/day1/forms.css
+++ b/day1/forms.css
@@ -1,8 +1,26 @@
-body{
-    background-color: aqua;
+.body{
+    
+    box-shadow: 10px 9px 20px azure;
+    height: 100vh;
+    width: 100vw;
+    
+
 
 
 }
 h1{
-    background-color: greenyellow;
+    background-color: rgb(228, 237, 215);
+}
+form
+{
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    width:100vw;
+    align-items: center;
+    justify-content:center;
+    background-color: azure;
+    border: 4px solid red;
+    border-radius: 10px;
+    
 }
